// Copyright (c) 2018 IoTeX
// This is an alpha (internal) release and is not suitable for production. This source code is provided 'as is' and no
// warranties are given as to title or non-infringement, merchantability or fitness for purpose and, to the extent
// permitted by law, all liability for your use of the code is disclaimed. This source code is governed by Apache
// License 2.0 that can be found in the LICENSE file.

// To compile the proto, run:
// protoc --go_out=plugins=grpc:. network/proto/rpc.proto
syntax = "proto3";

package network;

service Peer {
    rpc ping(Ping) returns (Pong) {}
    rpc getPeers(GetPeersReq) returns (GetPeersRes) {}
    rpc broadcast(BroadcastReq) returns (BroadcastRes) {}
    rpc tell(TellReq) returns (TellRes) {}
}

message Ping {
    uint64 nonce = 1;
    // Every one who participates into the network needs to tell others its address
    // TODO: Seperate it as a standalone protocol
    string addr = 2;
}

message Pong {
    uint64 ack_nonce = 1;
}

message GetPeersReq {
    uint32 count = 1;
}

message GetPeersRes {
    repeated string addr = 1;
}

message BroadcastReq {
    uint32 header = 1;
    uint32 msg_type = 2;
    bytes msg_body = 3;
}

message BroadcastRes {
    uint32 header = 1;
}

message TellReq {
    uint32 header = 1;
    string addr = 2;
    uint32 msg_type = 3;
    bytes msg_body = 4;
}

message TellRes {
    uint32 header = 1;
}