// Copyright (c) 2018 IoTeX
// This is an alpha (internal) release and is not suitable for production. This source code is provided 'as is' and no
// warranties are given as to title or non-infringement, merchantability or fitness for purpose and, to the extent
// permitted by law, all liability for your use of the code is disclaimed. This source code is governed by Apache
// License 2.0 that can be found in the LICENSE file.

// To compile the proto, run:
//      protoc --go_out=plugins=grpc:. *.proto
syntax = "proto3";

package p2ppb;

import "google/protobuf/timestamp.proto";

message BroadcastMsg {
    uint32 chain_id = 1;
    uint32 msg_type = 2;
    bytes msg_body = 3;
    string peer_id = 4;
    google.protobuf.Timestamp timestamp = 5;
}

message UnicastMsg {
    uint32 chain_id = 1;
    string addr = 2;
    uint32 msg_type = 3;
    bytes msg_body = 4;
    string peer_id = 5;
    google.protobuf.Timestamp timestamp = 6;
}
